style: fix style misalignments

--- a/style.css
+++ b/style.css
@@ -24,16 +24,18 @@ body {
   margin-right: 80px;
   max-width: 100vw;
   overflow-x: hidden;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
+  /* display: inline-flex; */
+  /* flex-direction: column; */
+  /* align-items: flex-start; */
+  margin: 0 80px;
 }
 
 header {
   display: flex;
   padding: 32px, 80px;
   padding-bottom: 24px;
-  height: 96px;
+  margin: 0 auto;
+  /* height: 96px; */
   width: 100%;
   max-width: 1280px;
   align-items: center;
@@ -48,13 +50,14 @@ img {
 
 .logo {
   width: 40px;
-  height: 40px;
+  /* height: 40px; */
 }
 
 nav {
   display: flex;
   width: 100%;
-  height: 96px;
+  padding: 24px 0;
+  /* height: 96px; */
   justify-content: space-between;
   align-self: stretch;
   align-items: center;
@@ -161,7 +164,7 @@ button {
   display: flex;
   width: 100%;
   max-width: 664px;
-  height: 640px;
+  /* height: 640px; */
   flex-direction: column;
   align-items: center;
   gap: -401px;
@@ -169,18 +172,25 @@ button {
 }
 
 .iphone-mockup {
-  display: flex;
-  width: 100%;
+  /* display: flex; */
+  /* width: 100%; */
   max-width: 512px;
   padding: 40px 86.448px 0px 86px;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
+}
+
+.iphone-mockup div {
+  height: 420px;
+  overflow: hidden;
+
 }
 
 .hero-section {
   display: flex;
   width: 100%;
-  height: 930px;
+  /* height: 930px; */
   padding: 56px 80px 96px 80px;
   flex-direction: column;
   align-items: center;
@@ -189,14 +199,16 @@ button {
 }
 
 .herobutton {
+  width: 100%;
   display: flex;
+  justify-content: center;
   align-items: flex-start;
   gap: 12px;
 }
 
 svg {
   width: 50px;
-  height: 50px;
+  /* height: 50px; */
   flex-shrink: 0;
   fill: #0d9383;
 }
@@ -215,6 +227,7 @@ svg {
   display: flex;
   width: 100%;
   max-width: 1280px;
+  margin: 0 auto;
   padding: 56px 80px;
   flex-direction: column;
   align-items: center;
@@ -309,8 +322,8 @@ section {
   background-color: #53389e;
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100vw;
-  max-width: 1280px;
+  /* width: 100vw;
+  max-width: 1280px; */
   border-radius: 24px;
   align-items: center;
   align-self: center;
@@ -342,6 +355,7 @@ section {
   display: flex;
   width: 100%;
   max-width: 1280px;
+  margin: 0 auto;
   padding: 56px 80px;
   justify-content: center;
   align-items: center;
@@ -373,6 +387,17 @@ section {
 
 /* lg */
 @media (max-width: 1024px) {
+  .features1 {
+    flex-direction: column;
+  }
+
+  .features2 {
+    flex-direction: column;
+  }
+
+  .cta-button {
+    flex-direction: column;
+  }
 }
 
 /* md */
@@ -388,6 +413,9 @@ section {
   .cta-button {
     flex-direction: column;
   }
+  .mockup-features1 {
+    padding: 28px;
+  }
 }
 
 /* sm */
@@ -402,6 +430,9 @@ section {
 
   .cta-button {
     flex-direction: column;
+  }
+  .mockup-features1 {
+    padding: 28px;
   }
 }
 
@@ -426,7 +457,7 @@ section {
   }
 
   .hero-section {
-    height: 720px;
+    /* height: 720px; */
     padding: 20px 40px 20px 40px;
     gap: 56px;
   }
@@ -457,6 +488,11 @@ section {
 
   .herobutton {
     flex-direction: column;
+    justify-content: center;
+  }
+
+  .herobutton div {
+    margin: 0 auto;
   }
 
   .cta-button {
@@ -467,8 +503,10 @@ section {
     padding: 20px 40px 20px 40px;
   }
   .cta-section {
-    height: 520px;
+    /* height: 520px; */
     padding: 20px 40px 20px 40px;
+    width: 100%;
+    max-width: 100%;
   }
 
   .cta-section-container {
@@ -500,7 +538,7 @@ section {
   }
 
   .hero-section {
-    height: 720px;
+    /* height: 720px; */
     padding: 20px 40px 20px 40px;
     gap: 56px;
   }
@@ -523,6 +561,7 @@ section {
 
   .mockup-features1 {
     padding: 28px;
+    height: 100%;
   }
 
   .supporting-text1 {
@@ -541,8 +580,10 @@ section {
     padding: 20px 40px 20px 40px;
   }
   .cta-section {
-    height: 520px;
+    /* height: 520px; */
     padding: 20px 40px 20px 40px;
+    width: 100%;
+    max-width: 100%;
   }
 
   .cta-section-container {
